--- a/dom/desafio-04/styles.css
+++ b/dom/desafio-04/styles.css
@@ -30,3 +30,15 @@
     width: 100px;
     height: 100px;
 }
+
+.barra_progresso {
+    width: 500px;
+    height: 50px;
+    border: black solid 1px;
+}
+
+.progresso {
+    background-color: red;
+    width: 0;
+    height: 100%;
+}
